// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultiLogLine /> tests search with highlight works 1`] = `
<div>
  <div
    class="logLine"
    style="grid-template-columns: 3ch 1fr;"
  >
    <span
      class="lineNumber"
    >
      101
    </span>
    <span
      class="out"
    >
      <span
        class=""
      >
        <span>
          Error: something went 
          <mark
            data-current-search-result="true"
            data-search-result-index="1"
          >
            wrong
          </mark>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`<MultiLogLine /> tests search works 1`] = `
<div>
  <div
    class="logLine"
    style="grid-template-columns: 3ch 1fr;"
  >
    <span
      class="lineNumber"
    >
      101
    </span>
    <span
      class="out"
    >
      <span
        class=""
      >
        <span>
          Error: something went 
          <mark
            data-search-result-index="1"
          >
            wrong
          </mark>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`<MultiLogLine /> tests snapshot test 1`] = `
<div>
  <div
    class="logLine"
    style="grid-template-columns: 3ch 1fr;"
  >
    <span
      class="lineNumber"
    >
      101
    </span>
    <span
      class="out"
    >
      <span
        class=""
      >
        <span>
          Error: something went wrong
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`<MultiLogLine /> tests works with link containing search text 2`] = `
<div>
  <div
    class="logLine"
    style="grid-template-columns: 3ch 1fr;"
  >
    <span
      class="lineNumber"
    >
      2
    </span>
    <span
      class="out"
    >
      <span
        class=""
      >
        <span>
          + echo @harness:registry=
        </span>
      </span>
      <span
        class=""
      >
        <a
          class="ansi-decoration-link"
          href="https://npm.pkg.github.com"
          rel="noreferrer"
          target="_blank"
        >
          <span>
            https://npm.
            <mark
              data-current-search-result="true"
              data-search-result-index="0"
            >
              pk
            </mark>
            g.github.com
          </span>
        </a>
      </span>
    </span>
  </div>
</div>
`;

exports[`<MultiLogLine /> tests works with mutliple links containing search text 1`] = `
<div>
  <div
    class="logLine"
    style="grid-template-columns: 3ch 1fr;"
  >
    <span
      class="lineNumber"
    >
      2
    </span>
    <span
      class="out"
    >
      <span
        class=""
      >
        <span>
          registry=
        </span>
      </span>
      <span
        class=""
      >
        <a
          class="ansi-decoration-link"
          href="https://npm.pkg.github.com"
          rel="noreferrer"
          target="_blank"
        >
          <span>
            https://npm.
            <mark
              data-current-search-result="true"
              data-search-result-index="0"
            >
              pk
            </mark>
            g.github.com
          </span>
        </a>
      </span>
      <span
        class=""
      >
        <span>
          , 
          <mark
            data-search-result-index="1"
          >
            pk
          </mark>
          g:harness, registry=
        </span>
      </span>
      <span
        class=""
      >
        <a
          class="ansi-decoration-link"
          href="https://npm.pkg.github.com"
          rel="noreferrer"
          target="_blank"
        >
          <span>
            https://npm.
            <mark
              data-search-result-index="2"
            >
              pk
            </mark>
            g.github.com
          </span>
        </a>
      </span>
      <span
        class=""
      >
        <span>
          , registry=
        </span>
      </span>
      <span
        class=""
      >
        <a
          class="ansi-decoration-link"
          href="https://npm.pkg.github.com"
          rel="noreferrer"
          target="_blank"
        >
          <span>
            https://npm.
            <mark
              data-search-result-index="3"
            >
              pk
            </mark>
            g.github.com
          </span>
        </a>
      </span>
    </span>
  </div>
</div>
`;
